# schellenberg_usb

./: .pre-commit-config.yaml  LICENSE  README.md  hacs.json  pyproject.toml
.github/workflows/: build-test.yaml  publish-pyschellenberg.yml  release.yaml  update-uv-lock.yml
custom_components/schellenberg_usb/: __init__.py  api.py  config_flow.py  const.py  cover.py  icons.json  identities.py  manifest.json  options_flow.py  options_flow_calibration.py  options_flow_led.py  options_flow_pairing.py  sensor.py  services.yaml  strings.json  switch.py
custom_components/schellenberg_usb/translations/: de.json  en.json  es.json  fr.json
pyschellenberg/: README.md  pyproject.toml
pyschellenberg/src/pyschellenberg/: __init__.py  const.py  protocol.py
test/: conftest.py  test_api.py  test_config_flow.py  test_init.py
tests/: __init__.py  conftest.py  test_api.py  test_api_extended.py  test_api_messages.py  test_config_flow.py  test_const.py  test_cover.py  test_init.py  test_init_extended.py  test_sensor.py  test_switch.py  test_translations.py
