[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyschellenberg"
version = "0.1.0"
description = "Python library for Schellenberg USB Funk-Stick"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "GimpArm" }
]
keywords = ["schellenberg", "home-automation", "smart-home", "blinds", "shades"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Home Automation",
]
dependencies = [
    "pyserial-asyncio>=0.6",
]

[project.urls]
Homepage = "https://github.com/GimpArm/schellenberg_usb"
Documentation = "https://github.com/GimpArm/schellenberg_usb"
Repository = "https://github.com/GimpArm/schellenberg_usb"
Issues = "https://github.com/GimpArm/schellenberg_usb/issues"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pyschellenberg"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by formatter
]

[tool.ruff.lint.isort]
known-first-party = ["pyschellenberg"]
